--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
     android:orientation="vertical"
     tools:context=".MainActivity"
     android:id="@+id/contentroot">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/morsein"/>
 
-    <TextView
-        android:text=""
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:id="@+id/morseout"/>
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/morsein"
+        android:inputType="text"
+        app:layout_constraintLeft_toLeftOf="@+id/msglist"
+        app:layout_constraintRight_toLeftOf="@+id/convertbutton"
+        app:layout_constraintBottom_toBottomOf="@+id/contentroot"
+        tools:ignore="LabelFor"/>
 
     <Button
-        android:layout_width="128dp"
-        android:layout_height="64dp"
-        android:layout_gravity="end"
-        android:text="Convert"
-        android:id="@+id/convertbutton"/>
-</LinearLayout>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="@string/convert"
+        android:id="@+id/convertbutton"
+        app:layout_constraintRight_toRightOf="@+id/msglist"
+        app:layout_constraintBottom_toBottomOf="@+id/contentroot"/>
+
+    <ListView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/msglist"
+        android:dividerHeight="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/convertbutton"
+        app:layout_constraintLeft_toLeftOf="@+id/contentroot"
+        app:layout_constraintRight_toRightOf="@+id/contentroot"
+        app:layout_constraintTop_toTopOf="@+id/contentroot"
+        />
+
+
+</android.support.constraint.ConstraintLayout>
